--- a/bibliography.bib
+++ b/bibliography.bib
@@ -504,3 +504,32 @@ eprint = {/oup/backfile/content_public/journal/mind/lix/236/10.1093_mind_lix.236
  	url = "https://en.wikipedia.org/wiki/Natural_language_generation#Applications",
  	note = "[En ligne; dernière consultation 12 juin 2018]"
 }
+@misc{wiki:roget,
+	author = "{Wikipedia contributors}",
+	title = "Roget's Thesaurus --- {W}ikipedia{,} The Free Encyclopedia",
+	url = "https://en.wikipedia.org/wiki/Roget%27s_Thesaurus",
+	note = "[En ligne; dernière consultation 17 juin 2018]"
+}
+@misc{wiki:jaquet_droz,
+	author = "{Wikipedia contributors}",
+	title = "Automates Jaquet-Droz --- {W}ikipedia{,} The Free Encyclopedia",
+	url = "https://fr.wikipedia.org/wiki/Automates_Jaquet-Droz",
+	note = "[En ligne; dernière consultation 17 juin 2018]"
+}
+@misc{wiki:jp_balpe,
+	author = "{Wikipedia contributors}",
+	title = "Jean-Pierre Balpe --- {W}ikipedia{,} The Free Encyclopedia",
+	url = "https://fr.wikipedia.org/wiki/Jean-Pierre_Balpe",
+	note = "[En ligne; dernière consultation 17 juin 2018]"
+}
+@misc{westworld,
+	author={Jonathan Nolan and Lisa Joy},
+	year={2016-},
+	title={Westworld},
+	howpublished={HBO},
+}
+@book{kant1791,
+	author={Emmanuel Kant},
+	title={Critique de la faculté de juger [Kritik der Urteilskraft]},
+	year={1791},
+	}
