--- a/adele_mortier_MEMOIRE_M1.tex
+++ b/adele_mortier_MEMOIRE_M1.tex
@@ -1534,7 +1534,7 @@
 					\item agir sur les corpus d'entraînement~: ajouter du bruit dans les données, mélanger les langues, et éventuellement incorporer des productions non-humaines (déjà produites par des IAs), afin d'observer l'émergence de néologismes;
 					\item agir sur les fonctions objectif~: éviter des scores de similarité trop normatifs qui pénalisent les syntagmes trop peu ``humains'', penser à des fonctions de similarité prenant en compte les aspects morphologiques permettant d'orienter intelligememnt les IAs dans leur processus de création lexicale\footnote{le but serait d'éviter les formes complètement inintelligibles comme ``?xgtZ:'', et d'encourager des formes originales comme ``robotéité'', un mélange entre ``robot'' et ``ipséité''...}
 					\item agir sur la façon d'évaluer les performances en phase de test~: au lieu de faire appel à un score impersonnel et purement statistique, pourquoi ne pas demander leur avis aux poètes~? 
-					\item agir sur la compréhension qu'a le système de son propre fonctionnement~: en favorisant les approches hybrides à bases de règles sémantiques flexibles\footnote{par exemple en utilisant des $\lambda$-termes ``à la Montague'' -- mais il faut l'avouer c'est un peu là notre ``dada''...} et d'apprentissage statistique sur ces règles
+					\item agir sur la compréhension qu'a le système de son propre fonctionnement~: en favorisant les approches hybrides à bases de règles sémantiques flexibles\footnote{par exemple en utilisant des $\lambda$-termes ``à la Montague'' -- mais il faut l'avouer c'est un peu là notre ``dada'' en termes de modélisation linguistique...} et d'apprentissage statistique sur ces règles
 				\end{itemize}
 				\vspace{2mm}
 				Ces pistes pourraient à terme permettre aux machines de ``diverger harmonieusement'' du modèle humain, pour enfin générer des œuvres à la fois purement originales et suffisamment rationnelles pour être interprétées.
