did some corrections after review

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,41 +1,49 @@
 @misc{alamo,
 	title={Site officiel de l'ALAMO},
 	note={[en ligne, disponible sur \url{http://www.alamo.free.fr/pmwiki.php}, dernier accès 17 juin 2018]},
+	keywords={site},
 	}
 @misc{arp1916,
 	author       = {Jean Arp}, 
 	title        = {Collages ``selon les lois du hasard''},
 	year         = {ca. 1916},
+	keywords={misc},
 }
 @misc{artistes_robots,
 	title={Artistes et Robots},
 	howpublished={Grand Palais},
 	note={Exposition du 5 avril au 9 juillet 2018},
+	keywords={misc},
 	}
 @misc{balpe_blog,
 	title={Blog de {J}ean-{P}ierre {B}alpe},
 	author={Jean-Pierre Balpe},
 	howpublished={\url{http://poetiques.blogg.org/}}
+	keywords={site},
 }
 @misc{balpe_site,
 	title={Site officiel de {J}ean-{P}ierre {B}alpe},
 	author={Jean-Pierre Balpe},
-	howpublished={\url{http://www.balpe.name/}}
+	howpublished={\url{http://www.balpe.name/}},
+	keywords={site},
 }
 @misc{balpe_disparition,
 	author={Jean-Pierre Balpe},
 	title={La Disparition du Général Proust},
 	note={Oeuvre hypertextuelle, désormais accessible à partir de l'adresse \href{http://www.balpe.name/}{http://www.balpe.name/}},
+	keywords={corpus, site},
 }
 @incollection{balpe_proust,
 	author       = {Jean Pierre Balpe}, 
 	title        = {{P}roust {M}emories},
 	booktitle    = {La {D}isparition du {G}énéral {P}roust},
+	keywords={corpus, site},
 }
 @incollection{balpe_stein,
 	author       = {Jean Pierre Balpe}, 
 	title        = {Poèmes {S}tein},
 	booktitle    = {La Disparition du Général Proust},
+	keywords={corpus, site},
 }
 @conference{balpebootz1994,
 	author       = {Jean-Pierre Balpe}, 
@@ -46,12 +54,14 @@
 	address      = {Villeneuve d'{A}scq},
 	organization = {Université de Lille 3},
 	publisher    = {{MOTS-VOIR, GERICO-CIRCAV}},
+	keywords={article},
 }
 @misc{orlan_grand_palais,
 	note={[en ligne, disponible sur \url{https://www.grandpalais.fr/fr/article/vous-allez-voir-orlan-en-double-au-grand-palais}, dernier accès 1è juin 2018]},
 	title={Vous allez voir ORLAN en double au Grand Palais},
 	year={2018},
 	month={mars},
+	keywords={misc},
 	}
 
 @article{balpe1994,
@@ -64,12 +74,14 @@
 	pages = {37--53},
 	author = {Jean-Pierre Balpe},
 	title = {Un roman inachevé -- {D}ispositifs},
-	journal = {Littérature}
+	journal = {Littérature},
+	keywords={article},
 }
 @misc{balpe_videoseries,
 	author={Jean-Pierre Balpe},
 	title={Dédale des Vidéoséries},
 	year={2018},
+	keywords={site, corpus},
 }
 @article{barras1995,
 	doi = {10.3406/litt.1995.1579},
@@ -81,7 +93,8 @@
 	pages = {74--83},
 	author = {Ambroise Barras},
 	title = {Prolégomènes à toute littérature informatique},
-	journal = {Littérature}
+	journal = {Littérature},
+	keywords={article},
 }
 @article{barthes1968,
 	author={Roland Barthes},
@@ -89,7 +102,8 @@
 	year={1968},
 	journal={Mantéia}
 	address={Marseille},
-	number={5},	
+	number={5},
+	keywords={theo},
 	}
 @article{bayard2002,
 	author={Pierre Bayard},
@@ -98,6 +112,7 @@
 	note={[numéro spécial {E}crivains, lecteurs, sous la direction de {B}runo {C}lément]},
 	month={février},
 	year={2002},
+	keywords={theo},
 	}
 @book{bello2016,
 	author = {Antoine Bello},
@@ -106,25 +121,28 @@
 	series={coll. Blanche},
 	year = {2016},
 	ISBN = {2070179672},
+	keywords={corpus},
 }
-@article{bonnet2017,
+@incollection{bonnet2017,
 	author={Gilles Bonnet},
 	title={Le livre implémenté},
 	publisher={Fabula / {L}es colloques, {I}nternet est un cheval de {T}roie},
 	note={[en ligne, disponible sur \url{http://www.fabula.org/colloques/document4127.php}, dernière consultation 15 juin 2018]},
+	keywords={article},
 }
 @misc{bootz,
-	author =       {Bootz, Philippe},
-	title =        {Un historique de la génération numérique de textes},
-	year =         {non daté},
-	url = {http://www.ieeff.org/f18bootz.pdf},
-	note =         {[En ligne; dernière consultation juin 2018]},
+	author={Philippe Bootz},
+	title={Un historique de la génération numérique de textes},
+	url={http://www.ieeff.org/f18bootz.pdf},
+	note={[En ligne; dernière consultation juin 2018]},
+	keywords={article},
 }
 @misc{bootz2012,
 	author={Philippe Bootz},
 	year={2012},
 	title={From {OULIPO} to {T}ransitoire {O}bservable -- {T}he {E}volution of {F}rench {D}igital {P}oetry},
 	note={[en ligne, disponible sur \url{http://www.dichtung-digital.org/2012/41/bootz/bootz.htm}, dernier accès 16 juin 2018]},
+	keywords={article},
 	}
 @conference{bootz2005,
 	author={Philippe Bootz},
@@ -133,13 +151,15 @@
 	publisher={Colloque e-forme},
 	address={St Etienne},
 	year={2005},
-	organization={Laboratoire {P}aragraphe, {U}niversité {P}aris 8}
+	organization={Laboratoire {P}aragraphe, {U}niversité {P}aris 8},
+	keywords={article},
 	}
 @misc{bootz2006,
 	title={Les Basiques : la littérature numérique},
-	author={Bootz, Philippe},
+	author={Philippe Bootz},
 	year={2006},
 	note={\href{https://www.olats.org/livresetudes/basiques/litteraturenumerique/basiquesLN.php}{https://www.olats.org/livresetudes/basiques/litteraturenumerique/basiquesLN.php}},
+	keywords={site},
 }	
 @misc{bordeleau2009,
 	title = {La {D}isparition du {G}énéral {P}roust},
@@ -147,7 +167,8 @@
 	year={2009},
 	publisher={Chaire de recherche du {C}anada sur les arts et les littératures numériques -- {L}e {L}aboratoire de recherche sur les oeuvres hypermédiatiques},
 	howpublished = {\url{http://nt2.uqam.ca/fr/repertoire/la-disparition-du-general-proust}},
-	note = {[En ligne, dernier accès 15 juin 2018]}
+	note = {[En ligne, dernier accès 15 juin 2018]},
+	keywords={site},
 }
 @book{breton1968,
 	author={André Breton and Philippe Soupault},
@@ -155,7 +176,8 @@
 	publisher= {Gallimard},
 	series={coll. Poésie/Gallimard n° 74},
 	year={1968},
-	note={Préface d'Alain Jouffroy, première parution}
+	note={Préface d'Alain Jouffroy, première parution},
+	keywords={minor, book},
 }
 @book{breton1937,
 	author={André Breton},
@@ -164,6 +186,7 @@
 	series={coll. Folio n° 723},
 	year={1976},
 	note={Première parution 1937},
+	keywords={minor, book},
 }
 @book{carroll1871,
 	author={Lewis Carroll},
@@ -171,6 +194,7 @@
 	publisher={Macmillan {\&} Co},
 	address={Londres},
 	year={1871},
+	keywords={book, corpus},
 	}
 @book{chomsky1979,
 	Author = {Noam Chomsky},
@@ -178,6 +202,7 @@
 	Publisher = {Seuil},
 	Year = {1979},
 	ISBN = {2020050730},
+	keywords={tech},
 }
 @article{chomsky1956,
 	author={Noam Chomsky},
@@ -185,7 +210,8 @@
 	journal={IRE Transactions on Information Theory},
 	number={2},
 	year={1956},
-	pages={113--124},	
+	pages={113--124},
+	keywords={tech},
 }
 @book{chomsky1995,
 	author={Noam Chomsky},
@@ -193,15 +219,17 @@
 	publisher={MIT Press},
 	address={Cambridge Mass.},
 	year={1995},
+	keywords={tech},
 }
 @article{clement2011,
-	author={Clément, Jean},
+	author={Jean Clément},
 	title={Poétique du hasard et de l'aléatoire en littérature numérique},
 	year={2011},
 	journal={Protée},
 	volume={39},
 	number={1},
 	pages={67-76},
+	keywords={article},
 }
 @book{cortazar1967,
 	author = {Julio Cort\'{a}zar},
@@ -210,31 +238,44 @@
 	year={1979},
 	publisher={Gallimard},
 	series={coll. L'Imaginaire n° 51},
+	keywords={corpus, book},
 }
 @misc{dehaene2017,
-	author =       {Dehaene, Stanislas},
+	author =       {Stanislas Dehaene},
 	title =        {Origines du langage et singularité de l'espèce humaine},
 	year =         {2017-2018},
 	note =         {Série de cours donnés au Collège de France},
 	url ={https://www.college-de-france.fr/site/stanislas-dehaene/course-2017-2018.htm},
+	keywords={tech},
+}
+@book{dreyfus1965,
+	title={Alchemy and artificial intelligence},
+	author={Hubert Dreyfus},
+	lccn={66006463},
+	series={P (Rand Corporation)},
+	year={1965},
+	publisher={Rand Corp.}
 }
 @misc{duchamp1915,
 	author       = {Marcel Duchamp}, 
 	title        = {Erratum musical},
 	howpublished = {Mine graphite et encre sur papier ligné (portées musicales)},
 	year         = {1912-1915},
+	keywords={misc, minor},
 }
 @misc{ducrocq1964,
 	author={Albert Ducrocq and Louis Couffignal},
 	year={1964},
 	title={Calliope},
+	keywords={corpus, misc},
 }
 @misc{edin2018,
 	author={Vincent Edin and Blaise Mao},
-	title={La machine n'a pas la moindre idée de la complexité du langage -- {E}ntretien avec {iG}lles {M}oyse, docteur et fondateur de la startup {R}éci{TAL}},
+	title={La machine n'a pas la moindre idée de la complexité du langage -- {E}ntretien avec {G}illes {M}oyse, docteur et fondateur de la startup {R}éci{TAL}},
 	year={2018},
 	month={février},
 	note={[En ligne, accessible sur \url{https://usbeketrica.com/article/la-machine-n-a-pas-la-moindre-idee-de-la-complexite-du-langage}, dernier accès 15 juin 2018},
+	keywords={misc},
 	}
 @incollection{ernst1926,
 	author={Max Ernst},
@@ -242,6 +283,7 @@
 	booktitle={Histoire naturelle},
 	year={1925-1926},
 	howpublished={Mine de plomb sur papier},
+	keywords={misc, minor},
 }
 @article{foucault1969,
 	title = {Qu'est-ce qu'un auteur?},
@@ -251,19 +293,31 @@
 	journal = {Soci\'et\'e Fran\c{c}aise de Philosophie, Bulletin},
 	author = {Michel Foucault},
 	year = {1969},
-	volume = {63}
+	volume = {63},
+	keywords={theo},
+}
+@incollection{frege1997,
+	author = {Gottlob Frege},
+	publisher = {Blackwell},
+	year = {1997},
+	booktitle = {The Frege Reader},
+	editor = {Michael Beaney},
+	title = {Begriffsschrift. A Formula Language of Pure Thought Modelled on That of Arithmetic},
+	keywords={tech, theo},
 }
 @misc{gilbert2018,
 	author={Jacques-Athanase Gilbert and Romain Jalabert},
 	title={Carnet de recherche -- {E}ntretien avec {J}acques-{A}thanase {G}ilbert},
 	howpublished={Observatoire de la vie littéraire, \url{http://132.227.201.10:8086/entretien-avec-jacques-athanase-gilbert}}
 	month={mai},
+	keywords={misc},
 	}
 @article{guilet2017,
 	title={Robopo{ï}èse -- {L}'intelligence artificielle appliquée au champ de la génération de texte},
 	author={Ana{ï}s Guilet and Franck Soudan},
 	journal={Actes du Colloque de Cerisy},
 	year={2017},
+	keywords={article},
 }
 @book{ionesco1950,
 	title =     {La cantatrice chauve suivi de {L}a {L}eçon},
@@ -273,6 +327,7 @@
 	isbn =      {2070362361,9782070362363},
 	year =      {1972},
 	note={[création 1950]},
+	keywords={corpus},
 }
 @article{jakobson1960,
 	author={Roman Jakobson},
@@ -281,6 +336,7 @@
 	publisher={T.A. Sebeok},
 	address={New-York},
 	year={1960},
+	keywords={theo},
 	}
 @article{jackson1982,
 	doi = {10.2307/2960077},
@@ -293,17 +349,19 @@
 	pages = {127},
 	author = {Frank Jackson},
 	title = {Epiphenomenal Qualia},
-	journal = {The Philosophical Quarterly}
+	journal = {The Philosophical Quarterly},
+	keywords={theo},
 }
 
 @misc{jeantet2018,
-	author =       {Jeantet, Claire},
+	author =       {Claire Jeantet},
 	title =        {Les Classiques à l’ère du numérique : de la conception aux usages {(BNF/Audiolib)}},
 	year =         {2018},
 	month =        {janvier},
 	note =         {Séminaire de Master organisé par Michel Bernard, Baptiste Bohet, Alexandre Gefen
 	(Centre de recherche Hubert de Phalèse), Université Paris 3 Sorbonne-Nouvelle},
 	url ={http://phalese.fr/spip/spip.php?article14},
+	keywords={misc},
 }
 @incollection{joshi1997,
 	doi = {10.1007/978-3-642-59126-6_2},
@@ -313,7 +371,8 @@
 	pages = {69--123},
 	author = {Aravind K. Joshi and Yves Schabes},
 	title = {Tree-Adjoining Grammars},
-	booktitle = {Handbook of Formal Languages}
+	booktitle = {Handbook of Formal Languages},
+	keywords={tech},
 }
 @article{labastie2016,
 	doi = {10.4000/temporalites.3534},
@@ -324,7 +383,16 @@
 	number = {24},
 	author = {Claire Labastie},
 	title = {Art,  retard,  hasard},
-	journal = {Temporalités}
+	journal = {Temporalités},
+	keywords={article},
+}
+@Book{lucbert2017,
+	author = {Lucbert, Sandra},
+	title = {La toile : roman},
+	publisher = {Gallimard},
+	year = {2017},
+	address = {Paris},
+	isbn = {2072694175}
 }
 @article{lutz1959,
 	author={Theo Lutz},
@@ -332,6 +400,7 @@
 	title={Stochastische Texte},
 	number=4,
 	note={[traduit de l'allemand en anglais par Helen MacCormac, 2005, disponible sur \href{http://www.stuttgarter-schule.de/lutz_schule_en.htm}{http://www.stuttgarter-schule.de/lutz\_schule\_en.htm}]},
+	keywords={corpus},
 }
 @article{mcmurray1980,
 	doi = {10.7202/036723ar},
@@ -343,19 +412,22 @@
 	pages = {147},
 	author = {Line Mc Murray},
 	title = {L'Oulipo~: ses anti-manifestes et leur mise en jeu},
-	journal = {{\'{E}}tudes françaises}
+	journal = {{\'{E}}tudes françaises},
+	keywords={article},
 }
 @book{pinker2008,
-	Author = {Pinker, Steven},
+	Author = {Steven Pinker},
 	Title = {L'instinct du langage (Edition française)},
 	Publisher = {Odile Jacob},
 	Year = {2008},
 	ISBN = {2738120040},
+	keywords={tech},
 }
 @book{queneau1961,
 	author={Raymond Queneau},
 	year={1961},
 	title={Cent mille milliards de poèmes},
+	keywords={corpus},
 }
 @article{raymond1993,
 	doi = {10.7202/800923ar},
@@ -367,31 +439,35 @@
 	pages = {77},
 	author = {François Raymond},
 	title = {Esthétique littéraire et informatique aléatoire},
-	journal = {Horizons philosophiques}
+	journal = {Horizons philosophiques},
+	keywords={article},
 }
 @misc{reboul2018,
-	author =       {Reboul, Marianne},
+	author =       {Marianne Reboul},
 	title =        {Apprendre à une machine à traduire : modéliser les identités multilingues},
 	year =         {2018},
 	month =        {février},
-	note =         {Séminaire de Master organisé par Michel Bernard, Baptiste Bohet, Alexandre Gefen
-	(Centre de recherche Hubert de Phalèse), Université Paris 3 Sorbonne-Nouvelle},
+	note =         {Séminaire de {M}aster organisé par {M}ichel Bernard, {B}aptiste {B}ohet, {A}lexandre {G}efen
+	({C}entre de recherche {H}ubert de {P}halèse), {U}niversité {P}aris 3 {S}orbonne-{N}ouvelle},
 	url ={http://phalese.fr/spip/spip.php?article14},
+	keywords={misc},
 }
 @article{riguet2017,
 	title={Le sacre d’une littérature palimpseste ?},
 	author={Marine Riguet},
 	journal={Actes du Colloque de Cerisy},
 	year={2017},
+	keywords={article},
 }
 @book{saporta1963,
 	author={Marc Saporta},
 	title={Composition n°1},
 	year={1963},
+	keywords={minor},
 }
 @article{schlenker2014,
 	TITLE = {{Monkey semantics: two ‘dialects' of Campbell's monkey alarm calls}},
-	AUTHOR = {Schlenker, Philippe and Chemla, Emmanuel and Arnold, Kate and Lemasson, Alban and Ouattara, Karim and Keenan, Sumir and Stephan, Claudia and Ryder, Robin and Zuberb{\"u}hler, Klaus},
+	AUTHOR = {Philippe Schlenker and Emmanuel Chemla and Kate Arnold and Alban Lemasson and Karim Ouattara and Sumir Keenan and Claudia Stephan and Robin Ryder and Klaus Zuberb{\"u}hler},
 	URL = {https://hal.archives-ouvertes.fr/hal-01098710},
 	JOURNAL = {{Linguistics and Philosophy}},
 	PUBLISHER = {{Springer Verlag}},
@@ -404,6 +480,7 @@
 	KEYWORDS = {Primate linguistics ; Primate semantics ; Alarm calls ; Primate communication},
 	HAL_ID = {hal-01098710},
 	HAL_VERSION = {v1},
+	keywords={tech},
 }
 @audio{serrell2018,
 	author={Mathilde Serrell},
@@ -412,7 +489,8 @@
 	month={Mars},
 	year=2018,
 	series={Court podcast audio},
-	url={https://www.franceculture.fr/emissions/le-billet-culturel/le-billet-culturel-du-jeudi-29-mars-2018}
+	url={https://www.franceculture.fr/emissions/le-billet-culturel/le-billet-culturel-du-jeudi-29-mars-2018},
+	keywords={misc},
 }
 @article{shannon1948,
 	doi = {10.1002/j.1538-7305.1948.tb01338.x},
@@ -425,7 +503,8 @@
 	pages = {379--423},
 	author = {C. E. Shannon},
 	title = {A Mathematical Theory of Communication},
-	journal = {Bell System Technical Journal}
+	journal = {Bell System Technical Journal},
+	keywords={tech},
 }
 @article{shieber1985,
 	doi = {10.1007/bf00630917},
@@ -438,7 +517,8 @@
 	pages = {333--343},
 	author = {Stuart M. Shieber},
 	title = {Evidence against the context-freeness of natural language},
-	journal = {Linguistics and Philosophy}
+	journal = {Linguistics and Philosophy},
+	keywords={tech},
 }
 @misc{socher2016,
 	author={Richard Socher and Francois Chaubard and Rohit
@@ -447,89 +527,115 @@
 	year={2016},
 	month={avril},
 	note={Note de cours, Université de Stanford},
+	keywords={tech},
 }
 @book{stein1932,
 	title =     {Stanzas in Meditation: The Corrected Edition},
-	author =    {Stein, Gertrude},
+	author =    {Gertrude Stein},
 	publisher = {Yale University Press {\&} Beinecke Rare Book and Manuscript Library},
 	isbn =      {0300153090,978-0-300-15309-5,9780300157338,0300157339},
 	year =      {2012},
 	series =    {},
 	edition =   {Edition corrigée},
 	volume =    {},
+	keywords={corpus},
 }
 @misc{strachey1952,
 	author={Christopher Strachey},
 	title={Love Letters},
 	year={1952},
 	note={Implémentation sur Manchester Mark 1},
+	keywords={corpus},
 }
 @book{strindberg1990,
 	title={Du hasard dans la production artistique},
-	author={Strindberg, August},
+	author={August Strindberg},
 	isbn={9782905657701},
 	url={https://books.google.fr/books?id=rNJTPgAACAAJ},
 	year={1990},
 	publisher={l'{\'E}choppe}
-	note={première parution 1894}
+	note={première parution 1894},
+	keywords={minor},
 }
 @misc{sunspring,
 	author={Oscar Sharp and Ross Goodwin and Benjamin(?)},
 	title={Sunspring},
 	year={2016},
 	note={[disponible à l'adresse \url{https://arstechnica.com/gaming/2016/06/an-ai-wrote-this-movie-and-its-strangely-moving/}, dernier accès 15 juin 2018},
+	keywords={corpus, misc},
 	}
 @article{turing1950,
-author = {Turing, A. M.},
-title = {Computing machinery and intelligence},
-journal = {Mind},
-volume = {LIX},
-number = {236},
-pages = {433-460},
-year = {1950},
-doi = {10.1093/mind/LIX.236.433},
-URL = {http://dx.doi.org/10.1093/mind/LIX.236.433},
-eprint = {/oup/backfile/content_public/journal/mind/lix/236/10.1093_mind_lix.236.433/1/433.pdf}
+	author = {Allan Mathison Turing},
+	title = {Computing machinery and intelligence},
+	journal = {Mind},
+	volume = {LIX},
+	number = {236},
+	pages = {433-460},
+	year = {1950},
+	doi = {10.1093/mind/LIX.236.433},
+	URL = {http://dx.doi.org/10.1093/mind/LIX.236.433},
+	eprint = {/oup/backfile/content_public/journal/mind/lix/236/10.1093_mind_lix.236.433/1/433.pdf},
+	keywords={tech},
+}
+@misc{uncanny,
+	place={Paris},
+	title={Technological uncanny : l'étrangeté technologique à l'ère du numérique}, journal={Technological uncanny : l'étrangeté technologique à l'ère du numérique}, publisher={Université Paris Diderot},
+	author={André, Emmanuelle and Beugnet, Martine and Vincent, Nicole and Kurtz, Camille},
+	url={http://udpn.fr/spip.php?article88}
 }
 @misc{vian1953,
 	author={Boris Vian},
 	year={1953},
 	title={``Un robot-poète ne nous fait pas peur'', {L}ettre à {A}ndré {P}arinaud},
 	month={avril},
-	note={[En ligne, version manuscrite disponible sur \url{http://www.andre-parinaud.fr/robots-vian.html}, dernier accès 17 juin 2018]}
+	note={[En ligne, version manuscrite disponible sur \url{http://www.andre-parinaud.fr/robots-vian.html}, dernier accès 17 juin 2018]},
+	keywords={misc, minor},
 	}
 @misc{wiki:fog,
- 	author = "{Wikipedia contributors}",
- 	title = "Natural language generation --- {W}ikipedia{,} The Free Encyclopedia",
+ 	author = "{Contributeurs Wikipedia}",
+ 	title = "Natural language generation --- {W}ikipédia{,} l'encyclopédie libre",
  	url = "https://en.wikipedia.org/wiki/Natural_language_generation#Applications",
- 	note = "[En ligne; dernière consultation 12 juin 2018]"
+ 	note = "[En ligne; dernière consultation 12 juin 2018]",
+ 	keywords={site},
 }
 @misc{wiki:roget,
-	author = "{Wikipedia contributors}",
-	title = "Roget's Thesaurus --- {W}ikipedia{,} The Free Encyclopedia",
+	author = "{Contributeurs Wikipedia}",
+	title = "Roget's Thesaurus --- {W}ikipédia{,} l'encyclopédie libre",
 	url = "https://en.wikipedia.org/wiki/Roget%27s_Thesaurus",
-	note = "[En ligne; dernière consultation 17 juin 2018]"
+	note = "[En ligne; dernière consultation 17 juin 2018]",
+	keywords={site},
 }
 @misc{wiki:jaquet_droz,
-	author = "{Wikipedia contributors}",
-	title = "Automates Jaquet-Droz --- {W}ikipedia{,} The Free Encyclopedia",
+	author = "{Contributeurs Wikipedia}",
+	title = "Automates Jaquet-Droz --- {W}ikipédia{,} l'encyclopédie libre",
 	url = "https://fr.wikipedia.org/wiki/Automates_Jaquet-Droz",
-	note = "[En ligne; dernière consultation 17 juin 2018]"
+	note = "[En ligne; dernière consultation 17 juin 2018]",
+	keywords={site},
 }
 @misc{wiki:jp_balpe,
-	author = "{Wikipedia contributors}",
-	title = "Jean-Pierre Balpe --- {W}ikipedia{,} The Free Encyclopedia",
+	author = "{Contributeurs Wikipedia}",
+	title = "Jean-Pierre Balpe --- {W}ikipédia{,} l'encyclopédie libre",
 	url = "https://fr.wikipedia.org/wiki/Jean-Pierre_Balpe",
-	note = "[En ligne; dernière consultation 17 juin 2018]"
+	note = "[En ligne; dernière consultation 17 juin 2018]",
+	keywords={site},
+}
+@misc{wiki:cantatrice,
+	author = "{Contributeurs Wikipedia}",
+	title = "La Cantatrice chauve --- {W}ikipédia{,} l'encyclopédie libre",
+	url = "https://fr.wikipedia.org/wiki/La_Cantatrice_chauve",
+	note = "[En ligne; dernière consultation 22 août 2018]",
+	keywords={site},
 }
 @misc{westworld,
 	author={Jonathan Nolan and Lisa Joy},
 	year={2016-},
 	title={Westworld},
 	howpublished={HBO},
+	keywords={corpus},
 }
 @book{kant1791,
 	author={Emmanuel Kant},
 	title={Critique de la faculté de juger [Kritik der Urteilskraft]},
 	year={1791},
+	keywords={theo},
 	}
